final_work/mosquitto-exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto-exporter
  labels:
    app: mosquitto-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto-exporter
  template:
    metadata:
      labels:
        app: mosquitto-exporter
    spec:
      containers:
      - name: mosquitto-exporter
        image: sapcc/mosquitto-exporter
        ports:
        - containerPort: 9234
          name: exporterport
