final_work/mosquitto-exporter-service.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: mosquitto-exporter-service
spec:
    selector:
        app: mosquitto-exporter
    type: LoadBalancer
    ports:
    - port: 9234
      name: exporterport
      protocol: TCP
      targetPort: exporterport
