final_work/node-exporter-service.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: node-exporter-service
spec:
    selector:
        app: node-exporter
    type: LoadBalancer
    ports:
    - port: 9100
      name: exporterport
      protocol: TCP
      targetPort: exporterport
