final_work/prometheus-service.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: prometheus-service
    annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port:   '9090'

spec:
    selector:
        app: prometheus
    type: LoadBalancer
    ports:
    - port: 8080
      name: prometheus
      protocol: TCP
      targetPort: web
