final_work/grafana-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: grafana-route
spec:
  host: grafana.student474.rahtiapp.fi
  port:
    targetPort: http-grafana-service
  to:
    kind: Service
    name: grafana
    weight: 100
