final_work/prometheus-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: prometeus-route
spec:
  host: promethues.student474.rahtiapp.fi
  port:
    targetPort: prometheus
  to:
    kind: Service
    name: prometheus-service
    weight: 100
